[project]
name = "deep-flow-prediction"
version = "0.1.0"
description = ""
authors = [
    {name = "v01d.dev",email = "v01d.dev.sh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "torch (>=2.12.0,<3.0.0)",
    "numpy (>=2.4.5,<3.0.0)",
    "torchvision (>=0.27.0,<0.28.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
